<resources>
    <string name="app_name">Zerochan</string>
    <string name="action_sort">Sort</string>
    <string name="action_related_tags_toggle">Related Tags</string>

    <string name="title_search_results">Search results</string>
    <string name="title_tags">Popular Tags</string>
    <string name="hint_tag_search">Search</string>

    <string name="loading">Loading</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="order">Order</string>
    <string name="order_recent">Recent</string>
    <string name="order_popular_week">Popular Last Week</string>
    <string name="order_popular_month">Popular Last 3 Months</string>
    <string name="order_popular_all">Popular All Time</string>
    <string name="resolution">Resolution</string>
    <string name="resolution_all">All Sizes</string>
    <string name="resolution_better">Large and better</string>
    <string name="resolution_large">Only very large</string>

    <string name="transition_thumb">transition_thumb</string>
</resources>